# boxd

./: .gitignore  CMakeLists.txt  README.md  tmp.csv
cpp/: main.cpp
py/: data.py
src/: data.py  main.cpp
